autosaving  so that - killing the app doesn't lose your algorithm input - crash reports may be generated wih algorithm input included
upgrading to .net4.6.1 to use async/await for the autosave
introducing rx to use throttling for the autosave
moving xmlio out of infrastructure to avoid upgrading all projects for now

--- a/VizualAlgoGeom/VizualAlgoGeom/CursorsResource.resx
+++ b/VizualAlgoGeom/VizualAlgoGeom/CursorsResource.resx
@@ -127,4 +127,7 @@
   <data name="PointingFinger" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>PointingFinger.cur;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="MainForm_AutosaveFailed" xml:space="preserve">
+    <value>Autosave failed. Please try to save manually.</value>
+  </data>
 </root>
