--- a/VizualAlgoGeom/VizualAlgoGeom/AlgorithmLoadProgressDialog.ro.resx
+++ b/VizualAlgoGeom/VizualAlgoGeom/AlgorithmLoadProgressDialog.ro.resx
@@ -112,12 +112,12 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="_cancelButton.Location" type="System.Drawing.Point, System.Drawing">
     <value>375, 14</value>
   </data>
@@ -130,11 +130,17 @@
   <data name="progressBar.Size" type="System.Drawing.Size, System.Drawing">
     <value>333, 23</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Algoritmul se execută...</value>
+  </data>
+  <data name="algorithm execution problem" xml:space="preserve">
+    <value>A apărut o problemă la execuția algoritmului</value>
+  </data>
+  <data name="please contact author" xml:space="preserve">
+    <value>A fost creată o arhivă cu autosave-ul și logurile curente în %appdata%/VizualAlgoGeom/IssueReporting. Te rog atașează fișierul într-un issue. Vrei să faci asta acum?</value>
   </data>
 </root>
